<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_memo"
        android:icon="@drawable/ic_plus"
        android:title="@string/add_memo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item"
        android:icon="@drawable/ic_share_logo"
        android:title="@string/share"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/share_art"
                android:title="@string/share_art_text" />
            <item
                android:id="@+id/share_memo"
                android:title="@string/share_memo_text" />
        </menu>
    </item>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/upload"
                android:icon="@drawable/ic_upload_button"
                android:title="@string/upload_text" />
            <item
                android:id="@+id/info"
                android:elevation="5dp"
                android:icon="@drawable/ic_info_button"
                android:title="@string/info_text" />
        </menu>
    </item>
    <group
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <group
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</menu>